--- a/index (2).html
+++ b/index (2).html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./giotthieubanthancss.css">
 </head>
 <body>
-	<img src="E:\code virua\anhdep1.jfif" width="100%" height="100px">
+	<img src="anhdep1.jfif" width="100%" height="100px">
     
                     <div class="menu_kk"> 
                         <div class="menu">
@@ -47,7 +47,7 @@
 </div>
   
         </td>
-        <td align =" center" > <img width="150px" height="150px" src="E:\code virua\anhcanhan.jpg">
+        <td align =" center" > <img width="150px" height="150px" src="anhcanhan.jpg">
            <br> Họ và tên : Lương quốc diệu<br>
                 Mã sinh viên : 1671020056<br>
                 Ngày sinh: 02-06-2004<br>
